src/objects/FIN_AddressBook__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name_F__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FIN Address Books</relationshipLabel>
        <relationshipName>JDE_Address_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Mode_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field used to prevent overwrite by Accounts billing mode for this JDE Address Book</inlineHelpText>
        <label>Billing Mode Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Mode__c</fullName>
        <label>Billing Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Ebill</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Book_Number__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>Book Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compass_Id__c</fullName>
        <description>The compass ID with Address book type and number sequence (ex. C12345_01)</description>
        <formula>TEXT(Account__r.Compass_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The compass ID with Address book type and number sequence (ex. C12345_01)</inlineHelpText>
        <label>Compass Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name_F__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>JDE_Address_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                    <label>AF - Afghanistan</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <label>AX - Aland Islands</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>AL - Albania</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>DZ - Algeria</label>
                </value>
                <value>
                    <fullName>AS</fullName>
                    <label>AS - American Samoa</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>AD - Andorra</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>AO - Angola</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>AI - Anguilla</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>AQ - Antarctica</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>AG - Antigua and Barbuda</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>AR - Argentina</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>AM - Armenia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>AW - Aruba</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>AU - Australia</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>AT - Austria</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>AZ - Azerbaijan</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <label>BS - Bahamas</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>BH - Bahrain</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>BD - Bangladesh</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>BB - Barbados</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <label>BY - Belarus</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>BE - Belgium</label>
                </value>
                <value>
                    <fullName>BZ</fullName>
                    <label>BZ - Belize</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>BJ - Benin</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>BM - Bermuda</label>
                </value>
                <value>
                    <fullName>BT</fullName>
                    <label>BT - Bhutan</label>
                </value>
                <value>
                    <fullName>BO</fullName>
                    <label>BO - Bolivia</label>
                </value>
                <value>
                    <fullName>BQ</fullName>
                    <label>BQ - Bonaire, Sint Eustatius and Saba</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>BA - Bosnia and Herzegovina</label>
                </value>
                <value>
                    <fullName>BW</fullName>
                    <label>BW - Botswana</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_From_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created From Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electronic_Address_Category__c</fullName>
        <description>Type of email sent</description>
        <inlineHelpText>Type of email sent</inlineHelpText>
        <label>Electronic Address Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INV</fullName>
                </value>
                <value>
                    <fullName>POP</fullName>
                </value>
                <value>
                    <fullName>SS1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Emails__c</fullName>
        <description>Field used to store comma-separated Emails from JDE. The first email is a primary one.</description>
        <label>Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_From_Compass_process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Compass Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JDE_Corporation_ID__c</fullName>
        <formula>Legal_Entity__r.Address_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JDE Corporation ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDE_Id__c</fullName>
        <externalId>true</externalId>
        <label>JDE Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JDE Corporation</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>JDE_Address_Books_Corp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mailing_Name__c</fullName>
        <description>Same as customer name</description>
        <inlineHelpText>Same as customer name</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Messaging_Indicator__c</fullName>
        <label>Messaging Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_Category__c</fullName>
        <label>PO Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Contractual</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Operational</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms_AR__c</fullName>
        <description>Payment terms per master agreement</description>
        <inlineHelpText>Payment terms per master agreement</inlineHelpText>
        <label>Payment Terms - A/R</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>0 - Due upon receipt</label>
                </value>
                <value>
                    <fullName>100</fullName>
                    <label>100 - Net 100</label>
                </value>
                <value>
                    <fullName>104</fullName>
                    <label>104 - Net 104</label>
                </value>
                <value>
                    <fullName>105</fullName>
                    <label>105 - Net 105</label>
                </value>
                <value>
                    <fullName>107</fullName>
                    <label>107 - Net 107</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>10 - Net 10</label>
                </value>
                <value>
                    <fullName>110</fullName>
                    <label>110 - Net 110</label>
                </value>
                <value>
                    <fullName>115</fullName>
                    <label>115 - Net 115</label>
                </value>
                <value>
                    <fullName>120</fullName>
                    <label>120 - Net 120</label>
                </value>
                <value>
                    <fullName>121</fullName>
                    <label>121 - Net 121</label>
                </value>
                <value>
                    <fullName>123</fullName>
                    <label>123 - Net 123</label>
                </value>
                <value>
                    <fullName>125</fullName>
                    <label>125 - Net 125</label>
                </value>
                <value>
                    <fullName>128</fullName>
                    <label>128 - Net 128</label>
                </value>
                <value>
                    <fullName>130</fullName>
                    <label>130 - Net 130</label>
                </value>
                <value>
                    <fullName>133</fullName>
                    <label>133 - Net 133</label>
                </value>
                <value>
                    <fullName>138</fullName>
                    <label>138 - Net 138</label>
                </value>
                <value>
                    <fullName>140</fullName>
                    <label>140 - Net 140</label>
                </value>
                <value>
                    <fullName>143</fullName>
                    <label>143 - Net 143</label>
                </value>
                <value>
                    <fullName>148</fullName>
                    <label>148 - Net 148</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>14 - Net 14</label>
                </value>
                <value>
                    <fullName>150</fullName>
                    <label>150 - Net 150</label>
                </value>
                <value>
                    <fullName>153</fullName>
                    <label>153 - Net 153</label>
                </value>
                <value>
                    <fullName>156</fullName>
                    <label>156 - Net 156</label>
                </value>
                <value>
                    <fullName>159</fullName>
                    <label>159 - Net 159</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>15 - Net 15</label>
                </value>
                <value>
                    <fullName>160</fullName>
                    <label>160 - Net 160</label>
                </value>
                <value>
                    <fullName>162</fullName>
                    <label>162 - Net 162</label>
                </value>
                <value>
                    <fullName>164</fullName>
                    <label>164 - Net 164</label>
                </value>
                <value>
                    <fullName>165</fullName>
                    <label>165 - Net 165</label>
                </value>
                <value>
                    <fullName>168</fullName>
                    <label>168 - Net 168</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Zip code</description>
        <inlineHelpText>Zip code</inlineHelpText>
        <label>Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Type__c</fullName>
        <description>Customer Address Book type</description>
        <label>Search Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>XC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Used in the US</description>
        <inlineHelpText>Used in the US</inlineHelpText>
        <label>State</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_1__c</fullName>
        <description>Mandatory field, needed to complete address book</description>
        <inlineHelpText>Mandatory field, needed to complete address book</inlineHelpText>
        <label>Street 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2__c</fullName>
        <label>Street 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_3__c</fullName>
        <label>Street 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Exemption_Certificate_Number__c</fullName>
        <label>Exemption Certificate #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Exemption_Expiration_Date__c</fullName>
        <description>Date Tax Exemption certificate expires</description>
        <inlineHelpText>Date Tax Exemption certificate expires</inlineHelpText>
        <label>Tax Exemption Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Exemption_Start_Date__c</fullName>
        <label>Tax Exemption Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Exemption_isActive__c</fullName>
        <description>Date tax exempt certificate is active/start date</description>
        <formula>TODAY() &lt; Tax_Exemption_Expiration_Date__c</formula>
        <inlineHelpText>Date tax exempt certificate is active/start date</inlineHelpText>
        <label>Exemption Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Expl_Code__c</fullName>
        <label>Tax Expl Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>V</fullName>
                    <label>V - Tax Value Added</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>E - Exempt Tax Value Added</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>S - Sales or VAT Tax</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Id__c</fullName>
        <description>Client VAT number</description>
        <inlineHelpText>Client VAT number</inlineHelpText>
        <label>Tax Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Rate_Area__c</fullName>
        <label>Tax Rate/Area</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Text__c</fullName>
        <label>Type Text</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bill To</fullName>
                </value>
                <value>
                    <fullName>Ship To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>FIN Address Book</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Account__c</columns>
        <columns>Mailing_Name__c</columns>
        <columns>Legal_Entity__c</columns>
        <columns>JDE_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FIN Address Books</pluralLabel>
    <recordTypes>
        <fullName>Ship_To</fullName>
        <active>true</active>
        <description>Used to create Address Book for Ship To Information</description>
        <label>Ship To</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_Changing_Name</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 NOT(ISNEW()),
 ISCHANGED(Name),
 $Profile.Name &lt;&gt; &apos;System Operator&apos;,
 $Profile.Name &lt;&gt; &apos;System Administrator&apos;
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You can&apos;t change Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Creating_Not_From_Contact</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(Created_From_Contact__c) ,
OR(ISNEW(),ISCLONE())  
)</errorConditionFormula>
        <errorMessage>You only can create Address Book from Contact record using &quot;Create Address Book&quot; button!</errorMessage>
    </validationRules>
</CustomObject>